0.6.15/io.gladed.watchable.store/-holding-store/index.md
[io.gladed.watchable.store](../index.md) / [HoldingStore](./index.md)

# HoldingStore

`class HoldingStore<T : `[`Any`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html)`> : CoroutineScope`

A [Store](../-store/index.md) factory producing stores that trigger operations on its items while those objects are in use.

For any new object retrieved, [createHold](#) is called to construct a [Hold](../-hold/index.md) on the object.

### Constructors

| Name | Summary |
|---|---|
| [&lt;init&gt;](-init-.md) | `HoldingStore(context: `[`CoroutineContext`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html)`, back: `[`Store`](../-store/index.md)`<`[`T`](index.md#T)`>, containerPeriod: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = DEFAULT_CONTAINER_PERIOD, createHold: suspend (`[`T`](index.md#T)`) -> `[`Hold`](../-hold/index.md)`)`<br>A [Store](../-store/index.md) factory producing stores that trigger operations on its items while those objects are in use. |

### Properties

| Name | Summary |
|---|---|
| [back](back.md) | `val back: `[`Store`](../-store/index.md)`<`[`T`](index.md#T)`>`<br>The store being wrapped. |
| [coroutineContext](coroutine-context.md) | `val coroutineContext: `[`CoroutineContext`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) |

### Functions

| Name | Summary |
|---|---|
| [create](create.md) | `fun create(scope: CoroutineScope): `[`Store`](../-store/index.md)`<`[`T`](index.md#T)`>`<br>Return a new [Store](../-store/index.md); items accessed by this store will have a corresponding hold (see [createHold](#)) in effect until the completion of all scopes using the item. |
| [stop](stop.md) | `suspend fun stop(): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Release everything regardless of the state of scopes. |

### Extension Functions

| Name | Summary |
|---|---|
| [batch](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/batch.md) | `fun <C : `[`Change`](../../io.gladed.watchable/-change/index.md)`> CoroutineScope.batch(watchable: `[`Watchable`](../../io.gladed.watchable/-watchable/index.md)`<`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/batch.md#C)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, func: suspend (`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/batch.md#C)`>) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>Deliver multiple changes for this [Watchable](../../io.gladed.watchable/-watchable/index.md) to [func](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/batch.md#io.gladed.watchable$batch(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.batch.C)), kotlin.Long, kotlin.coroutines.SuspendFunction1((kotlin.collections.List((io.gladed.watchable.batch.C)), kotlin.Unit)))/func) until the returned [Watcher](../../io.gladed.watchable/-watcher/index.md) is closed or this [CoroutineScope](#) completes. |
| [bind](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md) | `fun <M, C : `[`Change`](../../io.gladed.watchable/-change/index.md)`> CoroutineScope.bind(dest: `[`MutableWatchable`](../../io.gladed.watchable/-mutable-watchable/index.md)`<`[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#M)`, `[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#C)`>, origin: `[`Watchable`](../../io.gladed.watchable/-watchable/index.md)`<`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#C)`>): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>Bind [dest](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C)))/dest) so that it receives values from [origin](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C)))/origin) as long as the calling coroutineContext lives.`fun <M, C : `[`Change`](../../io.gladed.watchable/-change/index.md)`, C2 : `[`Change`](../../io.gladed.watchable/-change/index.md)`> CoroutineScope.bind(dest: `[`MutableWatchable`](../../io.gladed.watchable/-mutable-watchable/index.md)`<`[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#M)`, `[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#C)`>, origin: `[`Watchable`](../../io.gladed.watchable/-watchable/index.md)`<`[`C2`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#C2)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, apply: `[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#M)`.(`[`C2`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>Bind [dest](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/dest) so that it receives changes from [origin](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/origin) and applies them with [apply](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/apply) for as long as this [CoroutineScope](#) lives. |
| [guarded](../../io.gladed.watchable.util/guarded.md) | `fun <T> `[`T`](../../io.gladed.watchable.util/guarded.md#T)`.guarded(): `[`Guard`](../../io.gladed.watchable.util/-guard/index.md)`<`[`T`](../../io.gladed.watchable.util/guarded.md#T)`>`<br>Return [T](../../io.gladed.watchable.util/guarded.md#T) surrounded by a [Guard](../../io.gladed.watchable.util/-guard/index.md). |
| [simple](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/simple.md) | `fun <S, C : `[`HasSimpleChange`](../../io.gladed.watchable/-has-simple-change/index.md)`<`[`S`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/simple.md#S)`>> CoroutineScope.simple(watchable: `[`SimpleWatchable`](../../io.gladed.watchable/-simple-watchable/index.md)`<`[`S`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/simple.md#S)`, `[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/simple.md#C)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, func: suspend (`[`S`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/simple.md#S)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>Deliver simplified changes for this [Watchable](../../io.gladed.watchable/-watchable/index.md) as receiver objects to [func](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/simple.md#io.gladed.watchable$simple(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.SimpleWatchable((io.gladed.watchable.simple.S, io.gladed.watchable.simple.C)), kotlin.Long, kotlin.coroutines.SuspendFunction1((io.gladed.watchable.simple.S, kotlin.Unit)))/func) until the returned [Watcher](../../io.gladed.watchable/-watcher/index.md) is closed or this [CoroutineScope](#) completes. |
| [toWatchableValue](../../io.gladed.watchable/to-watchable-value.md) | `fun <T> `[`T`](../../io.gladed.watchable/to-watchable-value.md#T)`.toWatchableValue(): `[`WatchableValue`](../../io.gladed.watchable/-watchable-value/index.md)`<`[`T`](../../io.gladed.watchable/to-watchable-value.md#T)`>`<br>Convert this [T](../../io.gladed.watchable/to-watchable-value.md#T) to a watchable value of [T](../../io.gladed.watchable/to-watchable-value.md#T). |
| [twoWayBind](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md) | `fun <M, C : `[`Change`](../../io.gladed.watchable/-change/index.md)`> CoroutineScope.twoWayBind(left: `[`MutableWatchable`](../../io.gladed.watchable/-mutable-watchable/index.md)`<`[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#M)`, `[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#C)`>, right: `[`MutableWatchable`](../../io.gladed.watchable/-mutable-watchable/index.md)`<`[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#M)`, `[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#C)`>): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>`fun <M, M2, C : `[`Change`](../../io.gladed.watchable/-change/index.md)`, C2 : `[`Change`](../../io.gladed.watchable/-change/index.md)`> CoroutineScope.twoWayBind(left: `[`MutableWatchable`](../../io.gladed.watchable/-mutable-watchable/index.md)`<`[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#M)`, `[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#C)`>, right: `[`MutableWatchable`](../../io.gladed.watchable/-mutable-watchable/index.md)`<`[`M2`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#M2)`, `[`C2`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#C2)`>, updateLeft: `[`M`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#M)`.(`[`C2`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`, updateRight: `[`M2`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#M2)`.(`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#C)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>Bi-directionally bind [left](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#io.gladed.watchable$twoWayBind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.twoWayBind.M, io.gladed.watchable.twoWayBind.C)), io.gladed.watchable.MutableWatchable((io.gladed.watchable.twoWayBind.M, io.gladed.watchable.twoWayBind.C)))/left) and [right](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/two-way-bind.md#io.gladed.watchable$twoWayBind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.twoWayBind.M, io.gladed.watchable.twoWayBind.C)), io.gladed.watchable.MutableWatchable((io.gladed.watchable.twoWayBind.M, io.gladed.watchable.twoWayBind.C)))/right) together so that any change to one is reflected in the other (see [MutableWatchable.twoWayBind](../../io.gladed.watchable/-mutable-watchable/two-way-bind.md)). |
| [waitFor](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/wait-for.md) | `suspend fun <C : `[`Change`](../../io.gladed.watchable/-change/index.md)`, W : `[`Watchable`](../../io.gladed.watchable/-watchable/index.md)`<`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/wait-for.md#C)`>> CoroutineScope.waitFor(target: `[`W`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/wait-for.md#W)`, condition: (`[`W`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/wait-for.md#W)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Suspend until [condition](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/wait-for.md#io.gladed.watchable$waitFor(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.waitFor.W, kotlin.Function1((io.gladed.watchable.waitFor.W, kotlin.Boolean)))/condition) returns true, calling it after each group of changes. |
| [watch](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/watch.md) | `fun <C : `[`Change`](../../io.gladed.watchable/-change/index.md)`> CoroutineScope.watch(watchable: `[`Watchable`](../../io.gladed.watchable/-watchable/index.md)`<`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/watch.md#C)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, func: suspend (`[`C`](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/watch.md#C)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../../io.gladed.watchable/-watcher/index.md)<br>Deliver changes for this [Watchable](../../io.gladed.watchable/-watchable/index.md) to [func](../../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/watch.md#io.gladed.watchable$watch(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.watch.C)), kotlin.Long, kotlin.coroutines.SuspendFunction1((io.gladed.watchable.watch.C, kotlin.Unit)))/func) until the returned [Watcher](../../io.gladed.watchable/-watcher/index.md) is closed or this [CoroutineScope](#) completes. |
